@@ -26,26 +26,24 @@
 #include <windows.h>
 #include "pokefinder.h"
 
-IDD_POKEFINDER DIALOGEX DISCARDABLE 6,6,341,83
+IDD_POKEFINDER DIALOGEX DISCARDABLE 6,6,330,49
 CAPTION "Fuse - Poke Finder"
 STYLE WS_POPUP | WS_CAPTION | WS_VISIBLE | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 FONT 8,"Ms Shell Dlg 2",400,0,1
 BEGIN
-  CTEXT "Search for:", IDC_PF_SEARCH_FOR, 20, 25, 38, 9
-  CTEXT "Possible locations: 6", IDC_PF_LOCATIONS, 232/*250*/, 5, 84, 9
+  CTEXT "Search for:", IDC_PF_SEARCH_FOR, 20, 10, 38, 8
+  EDITTEXT IDC_PF_EDIT, 70, 7, 80, 14,
+    WS_CHILD | WS_TABSTOP | WS_VISIBLE, WS_EX_CLIENTEDGE
 
-  PUSHBUTTON "&Incremented", IDC_PF_INC, 4, 64, 60, 15
-  PUSHBUTTON "&Decremented", IDC_PF_DEC, 72, 64, 60, 15
-  DEFPUSHBUTTON "&Search", IDC_PF_SEARCH, 140, 64, 60, 15
-  PUSHBUTTON "&Reset", IDC_PF_RESET, 208, 64, 60, 15
-  PUSHBUTTON "&Close", IDCLOSE, 276, 64, 60, 15
+  CTEXT "Possible locations: 6", IDC_PF_LOCATIONS, 173, 10, 150, 8
+  CONTROL "", IDC_PF_LIST, "SysListView32",
+    WS_CHILD | WS_TABSTOP | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS,
+    173, 25, 150, 39, WS_EX_CLIENTEDGE
 
-  EDITTEXT IDC_PF_EDIT, 70, 24, 80, 12, 
-    WS_CHILD | WS_VISIBLE, WS_EX_CLIENTEDGE
-
-  CONTROL "",IDC_PF_LIST,"SysListView32", 
-    WS_CHILD | WS_VISIBLE | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS ,
-    170, 20, 165, 39, WS_EX_CLIENTEDGE
+  PUSHBUTTON "&Incremented", IDC_PF_INC, 7, 28, 60, 14
+  PUSHBUTTON "&Decremented", IDC_PF_DEC, 71, 28, 60, 14
+  DEFPUSHBUTTON "&Search", IDC_PF_SEARCH, 135, 28, 60, 14
+  PUSHBUTTON "&Reset", IDC_PF_RESET, 199, 28, 60, 14
+  PUSHBUTTON "&Close", IDCLOSE, 263, 28, 60, 14
 END
-
