@@ -3640,3 +3640,5 @@
          accomodate the set signal level block (Fred).
 20110531 peripherals/dck.c: ensure pages loaded from .dck files get saved back
          into snapshots.
+20110606 ui/win32/{debugger.c,pokefinder.c,pokefinder.rc}: fix Win32 build
+         (Sergio Baldoví)
